# nbp_exchange_rate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
nbp_exchange_rate/: hooks.py  modules.txt
nbp_exchange_rate/nbp_exchange_rate/scheduler/: exchange_rates.py
nbp_exchange_rate/nbp_exchange_rate/scheduler/tasks/: daily.py
